SCRUM-4072 do not print construct name in download file if marked as placeholder (#1420)