@@ -1,18 +1,20 @@
 package org.alliancegenome.core.translators.tdf;
 
+import org.alliancegenome.api.entity.AlleleVariantSequence;
+import org.alliancegenome.api.entity.GeneTransgenicAlleleSummaryDocument;
+import org.alliancegenome.api.entity.TransgenicAlleleSummaryDocument;
+import org.alliancegenome.curation_api.model.entities.Allele;
+import org.alliancegenome.curation_api.model.entities.Reference;
+import org.alliancegenome.curation_api.model.entities.TransgenicAlleleConstruct;
+import org.alliancegenome.neo4j.entity.node.Publication;
+import org.alliancegenome.neo4j.entity.node.TranscriptLevelConsequence;
+import org.apache.commons.collections.CollectionUtils;
+
 import java.util.Collection;
 import java.util.List;
 import java.util.Objects;
 import java.util.StringJoiner;
 import java.util.stream.Collectors;
-
-import org.alliancegenome.api.entity.AlleleVariantSequence;
-import org.alliancegenome.api.entity.GeneTransgenicAlleleSummaryDocument;
-import org.alliancegenome.api.entity.TransgenicAlleleSummaryDocument;
-import org.alliancegenome.curation_api.model.entities.*;
-import org.alliancegenome.neo4j.entity.node.Publication;
-import org.alliancegenome.neo4j.entity.node.TranscriptLevelConsequence;
-import org.apache.commons.collections.CollectionUtils;
 
 public class AlleleToTdfTranslator {
 
@@ -20,16 +22,16 @@ public class AlleleToTdfTranslator {
 
 		List<AlleleDownloadRow> list = getAlleleDownloadRowsForGenes(annotations);
 		List<DownloadHeader> headers = List.of(
-				new DownloadHeader<>("Allele ID", AlleleDownloadRow::getAlleleID),
-				new DownloadHeader<>("Allele Symbol", AlleleDownloadRow::getAlleleSymbol),
-				new DownloadHeader<>("Allele Synonyms", AlleleDownloadRow::getAlleleSynonyms),
-				new DownloadHeader<>("Category", AlleleDownloadRow::getVariantCategory),
-				new DownloadHeader<>("Variant Symbol", AlleleDownloadRow::getVariantSymbol),
-				new DownloadHeader<>("Variant Type", AlleleDownloadRow::getVariantType),
-				new DownloadHeader<>("Variant Consequence", AlleleDownloadRow::getVariantConsequence),
-				new DownloadHeader<>("Has Phenotype", AlleleDownloadRow::getHasPhenotype),
-				new DownloadHeader<>("Has Disease", AlleleDownloadRow::getHasDisease),
-				new DownloadHeader<>("Variant Information Reference", AlleleDownloadRow::getReference)
+			new DownloadHeader<>("Allele ID", AlleleDownloadRow::getAlleleID),
+			new DownloadHeader<>("Allele Symbol", AlleleDownloadRow::getAlleleSymbol),
+			new DownloadHeader<>("Allele Synonyms", AlleleDownloadRow::getAlleleSynonyms),
+			new DownloadHeader<>("Category", AlleleDownloadRow::getVariantCategory),
+			new DownloadHeader<>("Variant Symbol", AlleleDownloadRow::getVariantSymbol),
+			new DownloadHeader<>("Variant Type", AlleleDownloadRow::getVariantType),
+			new DownloadHeader<>("Variant Consequence", AlleleDownloadRow::getVariantConsequence),
+			new DownloadHeader<>("Has Phenotype", AlleleDownloadRow::getHasPhenotype),
+			new DownloadHeader<>("Has Disease", AlleleDownloadRow::getHasDisease),
+			new DownloadHeader<>("Variant Information Reference", AlleleDownloadRow::getReference)
 		);
 
 		return DownloadHeader.getDownloadOutput(list, headers);
@@ -37,34 +39,34 @@ public class AlleleToTdfTranslator {
 
 	public List<AlleleDownloadRow> getAlleleDownloadRowsForGenes(List<org.alliancegenome.neo4j.entity.node.Allele> annotations) {
 		return annotations.stream()
-				.map(annotation -> {
-					if (CollectionUtils.isNotEmpty(annotation.getVariants())) {
-						return annotation.getVariants().stream()
-								.map(join -> {
-									if (CollectionUtils.isNotEmpty(join.getPublications())) {
-										return join.getPublications().stream()
-												.map(pub -> getBaseDownloadRow(annotation, join, pub))
-												.collect(Collectors.toList());
-									} else {
-										return annotation.getVariants().stream()
-												.map(var -> getBaseDownloadRow(annotation, var, null))
-												.collect(Collectors.toList());
-									}
+			.map(annotation -> {
+				if (CollectionUtils.isNotEmpty(annotation.getVariants())) {
+					return annotation.getVariants().stream()
+						.map(join -> {
+							if (CollectionUtils.isNotEmpty(join.getPublications())) {
+								return join.getPublications().stream()
+									.map(pub -> getBaseDownloadRow(annotation, join, pub))
+									.collect(Collectors.toList());
+							} else {
+								return annotation.getVariants().stream()
+									.map(var -> getBaseDownloadRow(annotation, var, null))
+									.collect(Collectors.toList());
+							}
 
-								}).flatMap(Collection::stream)
-								.collect(Collectors.toList());
-					} else {
-						return List.of(getBaseDownloadRow(annotation, null, null));
-					}
-				})
-				.flatMap(Collection::stream)
-				.collect(Collectors.toList());
+						}).flatMap(Collection::stream)
+						.collect(Collectors.toList());
+				} else {
+					return List.of(getBaseDownloadRow(annotation, null, null));
+				}
+			})
+			.flatMap(Collection::stream)
+			.collect(Collectors.toList());
 	}
 
 	public List<AlleleVariantSequenceDownloadRow> alleleVariantSequenceDownloadRow(List<AlleleVariantSequence> annotations) {
 		return annotations.stream()
-				.map(this::getBaseAlleleVariantDownloadRow)
-				.collect(Collectors.toList());
+			.map(this::getBaseAlleleVariantDownloadRow)
+			.collect(Collectors.toList());
 	}
 
 
@@ -144,19 +146,19 @@ public class AlleleToTdfTranslator {
 		List<TransgenicAlleleDownloadRow> list = getTransgenicAlleleDownloadRowsForGenes(annotations);
 		List<DownloadHeader> headers;
 		headers = List.of(
-				new DownloadHeader<>("Species", TransgenicAlleleDownloadRow::getSpecies),
-				new DownloadHeader<>("Allele ID", TransgenicAlleleDownloadRow::getAlleleID),
-				new DownloadHeader<>("Allele Symbol", TransgenicAlleleDownloadRow::getAlleleSymbol),
-				new DownloadHeader<>("Transgenic Construct ID", TransgenicAlleleDownloadRow::getTgConstructID),
-				new DownloadHeader<>("Transgenic Construct", TransgenicAlleleDownloadRow::getTransgenicConstruct),
-				new DownloadHeader<>("Expressed Gene ID", TransgenicAlleleDownloadRow::getExpGeneID),
-				new DownloadHeader<>("Expressed Gene", TransgenicAlleleDownloadRow::getExpressedGene),
-				new DownloadHeader<>("Knockdown Target ID", TransgenicAlleleDownloadRow::getTargetID),
-				new DownloadHeader<>("Knockdown Target", TransgenicAlleleDownloadRow::getKnockdownTarget),
-				new DownloadHeader<>("Regulatory Region ID", TransgenicAlleleDownloadRow::getRegulatoryRegionID),
-				new DownloadHeader<>("Regulatory Region", TransgenicAlleleDownloadRow::getRegulatoryRegion),
-				new DownloadHeader<>("Has Phenotype", TransgenicAlleleDownloadRow::getHasPhenotype),
-				new DownloadHeader<>("Has Disease", TransgenicAlleleDownloadRow::getHasDisease)
+			new DownloadHeader<>("Species", TransgenicAlleleDownloadRow::getSpecies),
+			new DownloadHeader<>("Allele ID", TransgenicAlleleDownloadRow::getAlleleID),
+			new DownloadHeader<>("Allele Symbol", TransgenicAlleleDownloadRow::getAlleleSymbol),
+			new DownloadHeader<>("Transgenic Construct ID", TransgenicAlleleDownloadRow::getTgConstructID),
+			new DownloadHeader<>("Transgenic Construct", TransgenicAlleleDownloadRow::getTransgenicConstruct),
+			new DownloadHeader<>("Expressed Gene ID", TransgenicAlleleDownloadRow::getExpGeneID),
+			new DownloadHeader<>("Expressed Gene", TransgenicAlleleDownloadRow::getExpressedGene),
+			new DownloadHeader<>("Knockdown Target ID", TransgenicAlleleDownloadRow::getTargetID),
+			new DownloadHeader<>("Knockdown Target", TransgenicAlleleDownloadRow::getKnockdownTarget),
+			new DownloadHeader<>("Regulatory Region ID", TransgenicAlleleDownloadRow::getRegulatoryRegionID),
+			new DownloadHeader<>("Regulatory Region", TransgenicAlleleDownloadRow::getRegulatoryRegion),
+			new DownloadHeader<>("Has Phenotype", TransgenicAlleleDownloadRow::getHasPhenotype),
+			new DownloadHeader<>("Has Disease", TransgenicAlleleDownloadRow::getHasDisease)
 		);
 
 		return DownloadHeader.getDownloadOutput(list, headers);
@@ -165,19 +167,19 @@ public class AlleleToTdfTranslator {
 	public List<TransgenicAlleleDownloadRow> getTransgenicAlleleDownloadRowsForGenes(List<GeneTransgenicAlleleSummaryDocument> annotations) {
 
 		return annotations.stream()
-				.map(annotation -> {
-					List<TransgenicAlleleConstruct> transgenicAlleleConstructs = annotation.getAlleleDocument().getTransgenicAlleleConstructs();
-					if (CollectionUtils.isNotEmpty(transgenicAlleleConstructs)) {
-						return transgenicAlleleConstructs.stream()
-								.map(transgenicAlleleConstruct ->
-									getBaseDownloadAlleleTransgenicRow(annotation.getAlleleDocument(), transgenicAlleleConstruct, null))
-								.toList();
-					} else {
-						return List.of(getBaseDownloadAlleleTransgenicRow(annotation.getAlleleDocument(), null, null));
-					}
-				})
-				.flatMap(Collection::stream)
-				.collect(Collectors.toList());
+			.map(annotation -> {
+				List<TransgenicAlleleConstruct> transgenicAlleleConstructs = annotation.getAlleleDocument().getTransgenicAlleleConstructs();
+				if (CollectionUtils.isNotEmpty(transgenicAlleleConstructs)) {
+					return transgenicAlleleConstructs.stream()
+						.map(transgenicAlleleConstruct ->
+							getBaseDownloadAlleleTransgenicRow(annotation.getAlleleDocument(), transgenicAlleleConstruct, null))
+						.toList();
+				} else {
+					return List.of(getBaseDownloadAlleleTransgenicRow(annotation.getAlleleDocument(), null, null));
+				}
+			})
+			.flatMap(Collection::stream)
+			.collect(Collectors.toList());
 
 
 	}
@@ -190,7 +192,10 @@ public class AlleleToTdfTranslator {
 		row.setAlleleID(allele.getPrimaryExternalId());
 		row.setAlleleSymbol(allele.getAlleleSymbol().getFormatText());
 		row.setTgConstructID(transgenicAlleleConstruct.getConstruct().getPrimaryExternalId());
-		row.setTransgenicConstruct(transgenicAlleleConstruct.getConstruct().getConstructSymbol().getFormatText());
+		// do not print construct name if placeholder = true
+		if (!transgenicAlleleConstruct.getConstruct().getPlaceholder()) {
+			row.setTransgenicConstruct(transgenicAlleleConstruct.getConstruct().getConstructSymbol().getFormatText());
+		}
 		String expressedGene = "";
 		String expGeneID = "";
 		String targetGene = "";
@@ -243,19 +248,19 @@ public class AlleleToTdfTranslator {
 
 		List<VariantDownloadRow> list = getVariantDownloadRowsForAlleles(variants);
 		List<DownloadHeader> headers = List.of(
-				new DownloadHeader<>("Symbol", VariantDownloadRow::getSymbol),
-				new DownloadHeader<>("Variant Type", VariantDownloadRow::getVariantType),
-				new DownloadHeader<>("Overlaps", VariantDownloadRow::getOverlaps),
-				new DownloadHeader<>("Chromosome:Position", VariantDownloadRow::getChrPosition),
-				new DownloadHeader<>("Nucleotide Change", VariantDownloadRow::getChange),
-				new DownloadHeader<>("Most Severe Consequence", VariantDownloadRow::getConsequence),
-				new DownloadHeader<>("HGVS.gName", VariantDownloadRow::getHgvsG),
-				new DownloadHeader<>("HGVS.cName", VariantDownloadRow::getHgvsC),
-				new DownloadHeader<>("HGVS.pName", VariantDownloadRow::getHgvsP),
-				new DownloadHeader<>("Synonyms", VariantDownloadRow::getVariantSynonyms),
-				new DownloadHeader<>("Notes", VariantDownloadRow::getNotes),
-				new DownloadHeader<>("Cross References", VariantDownloadRow::getCrossReference),
-				new DownloadHeader<>("References", VariantDownloadRow::getReference)
+			new DownloadHeader<>("Symbol", VariantDownloadRow::getSymbol),
+			new DownloadHeader<>("Variant Type", VariantDownloadRow::getVariantType),
+			new DownloadHeader<>("Overlaps", VariantDownloadRow::getOverlaps),
+			new DownloadHeader<>("Chromosome:Position", VariantDownloadRow::getChrPosition),
+			new DownloadHeader<>("Nucleotide Change", VariantDownloadRow::getChange),
+			new DownloadHeader<>("Most Severe Consequence", VariantDownloadRow::getConsequence),
+			new DownloadHeader<>("HGVS.gName", VariantDownloadRow::getHgvsG),
+			new DownloadHeader<>("HGVS.cName", VariantDownloadRow::getHgvsC),
+			new DownloadHeader<>("HGVS.pName", VariantDownloadRow::getHgvsP),
+			new DownloadHeader<>("Synonyms", VariantDownloadRow::getVariantSynonyms),
+			new DownloadHeader<>("Notes", VariantDownloadRow::getNotes),
+			new DownloadHeader<>("Cross References", VariantDownloadRow::getCrossReference),
+			new DownloadHeader<>("References", VariantDownloadRow::getReference)
 		);
 
 		return DownloadHeader.getDownloadOutput(list, headers);
@@ -265,10 +270,10 @@ public class AlleleToTdfTranslator {
 	public List<VariantDownloadRow> getVariantDownloadRowsForAlleles(List<org.alliancegenome.neo4j.entity.node.Variant> annotations) {
 
 		return annotations.stream()
-				.map(this::getBaseDownloadVariantRow)
-				.collect(Collectors.toList());
+			.map(this::getBaseDownloadVariantRow)
+			.collect(Collectors.toList());
 	}
-	
+
 
 	private VariantDownloadRow getBaseDownloadVariantRow(final org.alliancegenome.neo4j.entity.node.Variant annotation) {
 		VariantDownloadRow row = new VariantDownloadRow();
@@ -338,25 +343,25 @@ public class AlleleToTdfTranslator {
 
 		List<AlleleVariantSequenceDownloadRow> list = alleleVariantSequenceDownloadRow(annotations);
 		List<DownloadHeader> headers = List.of(
-				new DownloadHeader<>("Allele ID", AlleleVariantSequenceDownloadRow::getAlleleID),
-				new DownloadHeader<>("Allele Symbol", AlleleVariantSequenceDownloadRow::getAlleleSymbol),
-				new DownloadHeader<>("Allele Synonyms", AlleleVariantSequenceDownloadRow::getAlleleSynonyms),
-				new DownloadHeader<>("Category", AlleleVariantSequenceDownloadRow::getVariantCategory),
-				new DownloadHeader<>("Has Phenotype", AlleleVariantSequenceDownloadRow::getHasPhenotype),
-				new DownloadHeader<>("Has Disease", AlleleVariantSequenceDownloadRow::getHasDisease),
-				new DownloadHeader<>("Variant HGVS.g Name", AlleleVariantSequenceDownloadRow::getHgvsgName),
-				new DownloadHeader<>("Variant Type", AlleleVariantSequenceDownloadRow::getVariantType),
-				new DownloadHeader<>("Sequence Feature ", AlleleVariantSequenceDownloadRow::getSequenceFeature),
-				new DownloadHeader<>("Sequence Feature Type", AlleleVariantSequenceDownloadRow::getSequenceFeatureType),
-				new DownloadHeader<>("Sequence Feature associated Gene", AlleleVariantSequenceDownloadRow::getSequenceFeatureAssociatedGene),
-				new DownloadHeader<>("Sequence Feature associated Gene ID", AlleleVariantSequenceDownloadRow::getSequenceFeatureAssociatedGeneID),
-				new DownloadHeader<>("Molecular Consequences", AlleleVariantSequenceDownloadRow::getMolecularConsequences),
-				new DownloadHeader<>("Variant Location", AlleleVariantSequenceDownloadRow::getLocation),
-				new DownloadHeader<>("VEP Impact", AlleleVariantSequenceDownloadRow::getVepImpact),
-				new DownloadHeader<>("Sift Prediction", AlleleVariantSequenceDownloadRow::getSiftPrediction),
-				new DownloadHeader<>("Sift Score", AlleleVariantSequenceDownloadRow::getSiftScore),
-				new DownloadHeader<>("PolyPhen Prediction", AlleleVariantSequenceDownloadRow::getPolyphenPrediction),
-				new DownloadHeader<>("PolyPhen Score", AlleleVariantSequenceDownloadRow::getPolyphenScore)
+			new DownloadHeader<>("Allele ID", AlleleVariantSequenceDownloadRow::getAlleleID),
+			new DownloadHeader<>("Allele Symbol", AlleleVariantSequenceDownloadRow::getAlleleSymbol),
+			new DownloadHeader<>("Allele Synonyms", AlleleVariantSequenceDownloadRow::getAlleleSynonyms),
+			new DownloadHeader<>("Category", AlleleVariantSequenceDownloadRow::getVariantCategory),
+			new DownloadHeader<>("Has Phenotype", AlleleVariantSequenceDownloadRow::getHasPhenotype),
+			new DownloadHeader<>("Has Disease", AlleleVariantSequenceDownloadRow::getHasDisease),
+			new DownloadHeader<>("Variant HGVS.g Name", AlleleVariantSequenceDownloadRow::getHgvsgName),
+			new DownloadHeader<>("Variant Type", AlleleVariantSequenceDownloadRow::getVariantType),
+			new DownloadHeader<>("Sequence Feature ", AlleleVariantSequenceDownloadRow::getSequenceFeature),
+			new DownloadHeader<>("Sequence Feature Type", AlleleVariantSequenceDownloadRow::getSequenceFeatureType),
+			new DownloadHeader<>("Sequence Feature associated Gene", AlleleVariantSequenceDownloadRow::getSequenceFeatureAssociatedGene),
+			new DownloadHeader<>("Sequence Feature associated Gene ID", AlleleVariantSequenceDownloadRow::getSequenceFeatureAssociatedGeneID),
+			new DownloadHeader<>("Molecular Consequences", AlleleVariantSequenceDownloadRow::getMolecularConsequences),
+			new DownloadHeader<>("Variant Location", AlleleVariantSequenceDownloadRow::getLocation),
+			new DownloadHeader<>("VEP Impact", AlleleVariantSequenceDownloadRow::getVepImpact),
+			new DownloadHeader<>("Sift Prediction", AlleleVariantSequenceDownloadRow::getSiftPrediction),
+			new DownloadHeader<>("Sift Score", AlleleVariantSequenceDownloadRow::getSiftScore),
+			new DownloadHeader<>("PolyPhen Prediction", AlleleVariantSequenceDownloadRow::getPolyphenPrediction),
+			new DownloadHeader<>("PolyPhen Score", AlleleVariantSequenceDownloadRow::getPolyphenScore)
 		);
 
 		return DownloadHeader.getDownloadOutput(list, headers);
